# Topaz

./: .gitignore  CMakeLists.txt  JSONParser.cmake  README.md  config.cmake  default_conf.json  logging_conf.json
include/: topaz.h  topaz_levels.h
src/: custom_printf.h  generate_printf.py  generate_source_code.py  generation_strings.yaml  levels_lut.h  output_config_directives.py  topaz.c  topaz.h.txt
tests/: test_topaz.c
